fix chart alignment, styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@ body
 }
 .underline{
 	height: 2px;
-	width: 50px;
+	width: 200px;
 	margin: 0px auto 60px;
 }
 /*=================================================
